# FastApi-store

./: .env  .env.sample  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh
alembic/: env.py
alembic/versions/: 04e1c0d5f1f0_.py  06531f448a98_increase_token_length_in_activation_.py  20d2b39e5ffd_initial_migration.py  21a77a328c70_init.py  26abec10a809_initial_migration.py  433edb953c60_create_tables.py  631e77bf2ea9_add_cascade_delete_on_cart_items_cart_.py  779ce1ac5bc2_drop_activation_tokens_table.py  7a9aaad5ac96_initial_migration.py  842ac6fcf817_initial_migration.py  8870be872531_decimal_model_fixed.py  96e53ee3b448_initial_migration.py  9def1cc9ec21_initial_migration.py  a3c0b0a326e3_init.py  b3639f36a523_initial_migration.py  b8dcedc7f76a_initial_migration.py  d642f425f833_fixed_models_relationship.py  d9ea80835cf8_initial.py  de3b8dba50b0_increase_token_length_in_activation_.py  e9a64dbfa8e5_test.py
src/: create_superuser.py  main.py
src/config/: auth.py  dependencies.py  settings.py
src/database/: engine.py
src/database/models/: __init__.py  account.py  product.py
src/routes/: account.py  product.py
src/schemas/: account.py  product.py
src/security/: interfaces.py  token_manager.py
src/tests/: conftest.py  test_product.py
