[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgen Sumskyi",email = "grendersq12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
packages = [{include = "src"}]
dependencies = [
    "requests (==2.32.3)",
    "fastapi (==0.115.12)",
    "sqlalchemy (==2.0.40)",
    "black (==25.1.0)",
    "pydantic-settings (==2.9.1)",
    "psycopg2-binary (==2.9.10)",
    "uvicorn (==0.34.2)",
    "passlib (==1.7.4)",
    "pyjwt (==2.10.1)",
    "pydantic (==2.11.4)",
    "bcrypt (==3.2.2)",
    "alembic (==1.15.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "asyncpg (==0.30.0)",
    "backports-tarfile (==1.2.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "distlib (==0.3.9)",
    "dnspython (==2.7.0)",
    "dulwich (==0.22.8)",
    "email-validator (==2.2.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "greenlet (==3.2.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "importlib-metadata (==8.7.0)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "keyring (==25.6.0)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.0)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "pbs-installer (==2025.4.9)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "pycparser (==2.22)",
    "pydantic-core (==2.33.2)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.1.0)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.13.0)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.2)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.5.1.12)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "virtualenv (==20.31.1)",
    "zipp (==3.21.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
